--- a/src/main/webapp/WEB-INF/fragmentos/view/view_cliente.jspf
+++ b/src/main/webapp/WEB-INF/fragmentos/view/view_cliente.jspf
@@ -7,10 +7,10 @@
 				Carta <span class="h1">👨‍🍳️</span>
 			</p>
 			
-			<div class="float-end p-2">
-			<button type="button" class="btn btn-info" ng-click = "view_pedidos = !view_pedidos">
-			Pedido <span class="badge bg-danger">{{pedido.platos.length}}</span>
-			</button>
+			<div class="float-end">
+				<button type="button" class="btn btn-info" ng-click = "view_pedidos = !view_pedidos">
+					Pedido <span class="badge bg-danger">{{pedido.platos.length}}</span>
+				</button>
 			</div>
 		</div>
 
@@ -39,28 +39,36 @@
 	</div>
 	
 	
-	<div class="mb-5 mx-5 row fixed-bottom " ng-show="view_pedidos">
-		<div class="offset-8 col-4 border rounded-3">
+	<div class="mb-5 mx-5 row fixed-bottom justify-content-end" ng-show="view_pedidos">
+		<div class="col-4 border rounded-3">
 			<div class="row">
 				<div class="col-12 bg-info">
 					<p class="text-center h2 text-light">{{titlePedido}}</p>
 				</div>
-				<div col-12 p-5>
+				<div  class="bg-light col-12">
 				 	<ul class="list-group mt-2 p-2">
 					  <li class="list-group-item d-flex justify-content-between align-items-center" ng-repeat = "(index, obj) in pedido.platos">
-					    {{obj.plato}} - {{obj.precio | currency:"S/"}}
+					  	<div>
+						    <button type="button" class="btn btn-success btn-sm" ng-click="addPlato(index)" ng-disabled = "pedidoEnviado">+</button>
+						    <button type="button" class="btn btn-danger btn-sm" ng-click="decreasePlato(index)" ng-disabled = "pedidoEnviado">–</button>
+					    </div>
+					    <div>{{obj.plato}} - {{obj.precio | currency:"S/"}}</div>
 					    <span class="badge bg-primary rounded-pill">{{obj.cantidad}}</span>
 					  </li>
 					</ul>
 				</div>
 				
-				<div class="col-12 border-top">
+				<div class="col-12 border-top bg-light">
 					<p class="text-end px-4 py-1">Total: {{pedido.total | currency:"S/"}} </p>
 				</div>
 				
-				<div class="col-12 px-4 py-3">
+				<div class="col-12 px-4 py-3 bg-light">
 					<div class="d-grid gap-2" ng-show ="pedido.platos.length >= 1 && !pedidoEnviado">
 						<button type="button" class="btn btn-success btn-block" ng-click = "sendPedido()">Enviar</button>
+					</div>
+					
+					<div class="d-grid gap-2" ng-show ="pedido.platos.length >= 1 && pedidoEnviado">
+						<button type="button" class="btn btn-danger" ng-click = "clearLocalStorage()">Acabar Pedido</button>
 					</div>
 				</div>
 			</div>
